@@ -25,6 +25,7 @@ Bugs fixed
 * #2206: Fix Sphinx latex doc build failed due to a footnotes
 * #2201: Fix wrong table caption for tables with over 30 rows
 * #2213: Set <blockquote> in the classic theme to fit with <p>
+* #1815: Fix linkcheck does not raise an exception if warniserror set to true and link is broken
 
 Release 1.3.3 (released Dec 2, 2015)
 ====================================
